--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -53,7 +53,7 @@ h1 {
   color: white;
   font-size: 50px;
   margin: 10 0 10px;
-  text-align: center; /* Ensure text is centered */
+  text-align: center;
   justify-content: center;
 }
 
