--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -110,15 +110,12 @@ table {
 }
 
 th, td {
+  //   font-weight: normal;
   color: white;
   text-align: left;
   padding: 5px 10px;
   border: none;
 }
-
-// th {
-//   font-weight: normal;
-// }
 
 dt {
   color: white;
@@ -172,11 +169,11 @@ hr {
 .made-by {
   text-align: center;
   font-size: 13px;
-  margin-top: 10px;
+  margin-top: 40px;
 }
 
 // footer {
-//   color: #f0f0f0; /* Subtle light text color */
+//   color: #f0f0f0; 
 //   text-align: center;
 //   font-size: 13px;
 //   width: auto; /*270px*/
