Refactor wrapper and header styles for improved margin and width consistency

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -17,11 +17,11 @@ img {
 
 .wrapper {
   width: 1000px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 header {
-  width:350px;
+  width:300px;
   float:left;
   position:fixed;
   // top: 0;
