Update README and SCSS styles for improved link visibility and header positioning

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -24,7 +24,7 @@ header {
   width:300px;
   float:left;
   position:fixed;
-  // top: 0;
+  top: 0;
   font-size: 14.5px;
   font-weight:350;
   -webkit-font-smoothing:subpixel-antialiased;
