--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -255,16 +255,16 @@ ul.downloads {
     // word-wrap: normal;
   }
 
-  // div.wrapper {
-  //   width:auto;
-  //   margin:0;
-  // }
+  div.wrapper {
+    width:auto;
+    margin:0;
+  }
 
-  // header, section, footer {
-  //   float:none;
-  //   position:static;
-  //   width:auto;
-  // }
+  header, section, footer {
+    float:none;
+    position:static;
+    width:auto;
+  }
 }
 
 @media print, screen and (max-width: 720px) {
