--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,11 @@
               <i class="fas fa-download"></i>
             </a>
           </li>
+          <li>
+            <a href="https://www.linkedin.com/in/kdpham-1002/" class="icon">
+              <span>View <strong>LinkedIn</strong></span>
+              <i class="fab fa-linkedin"></i>
+            </a>
         </ul>
 
         <p class="made-by">View <a href="{{ site.github.repository_url }}">this code</a></p>
@@ -58,10 +63,6 @@
       <section>
 
       {{ content }}
-
-      <!-- {% if site.github.is_project_page %}
-      <p class="made-by">Made by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-      {% endif %} -->
 
       </section>
       <footer>
