Add LinkedIn link to downloads section in default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,12 @@
         {% endif %} -->
         <ul class="downloads">
           <li>
+            <a href="https://www.linkedin.com/in/kdpham-1002/" class="icon">
+              <span>Connect <strong>LinkedIn</strong></span>
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
             <a href="https://github.com/kdpham-1002" class="icon">
               <span>View <strong>GitHub</strong></span>
               <i class="fab fa-github"></i>
@@ -46,15 +52,10 @@
           </li>
           <li>
             <a href="https://drive.google.com/file/d/1XK4EnbtcbcLng_BA5krfmxzvNpKASurw/view?usp=sharing" class="icon">
-              <span>View <strong>Resume</strong></span>
+              <span>Download <strong>Resume</strong></span>
               <i class="fas fa-download"></i>
             </a>
           </li>
-          <li>
-            <a href="https://www.linkedin.com/in/kdpham-1002/" class="icon">
-              <span>View <strong>LinkedIn</strong></span>
-              <i class="fab fa-linkedin"></i>
-            </a>
         </ul>
 
         <p class="made-by">View <a href="{{ site.github.repository_url }}">this code</a></p>
