Update link text in default layout for clarity

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
         <ul class="downloads">
           <li>
             <a href="https://www.linkedin.com/in/kdpham-1002/" class="icon">
-              <span>Connect <strong>LinkedIn</strong></span>
+              <span>View <strong>LinkedIn</strong></span>
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
@@ -52,7 +52,7 @@
           </li>
           <li>
             <a href="https://drive.google.com/file/d/1XK4EnbtcbcLng_BA5krfmxzvNpKASurw/view?usp=sharing" class="icon">
-              <span>Download <strong>Resume</strong></span>
+              <span>View <strong>Resume</strong></span>
               <i class="fas fa-download"></i>
             </a>
           </li>
