--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -13,6 +13,7 @@ img {
   margin: 5px 0;
   height: auto;
   justify-content: center;
+  border-radius: 200px;
 }
 
 .wrapper {
@@ -110,7 +111,7 @@ table {
 }
 
 th, td {
-  //   font-weight: normal;
+    font-weight: normal;
   color: white;
   text-align: left;
   padding: 5px 10px;
