--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -58,9 +58,11 @@ h1 {
 }
 
 h2 {
+  text-align: center;
+  justify-content: center;
   color: white;
   margin: 0 0 20px;
-  font-size: 30px;
+  font-size: 35px;
 }
 
 h3 {
