--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -9,8 +9,8 @@ body {
 }
 
 img {
-  max-width:100%;
   margin: 5px 0;
+  width: 100%;
   height: auto;
   justify-content: center;
   border-radius: 200px;
@@ -22,7 +22,7 @@ img {
 }
 
 header {
-  width: 320px;
+  width: 325px;
   float:left;
   position:fixed;
   top: 0;
@@ -171,9 +171,8 @@ hr {
 
 /* Style the "Made by" text */
 .made-by {
-  margin-top: 40px;
   text-align: center;
-  font-size: 13px;
+  font-size: 12.5px;
 }
 
 // footer {
@@ -205,16 +204,16 @@ ul.downloads {
 
 /* Style the buttons */
 .downloads a {
+  background: rgb(222, 222, 222); /* Button background */
+  color: #636161; /* Default text color */
   display: inline-flex; /* Align text and icon inside button */
   align-items: center; /* Vertically center icon and text */
   justify-content: center; /* Horizontally center content */
-  padding: 8px 12px; /* Adjust padding for smaller button size */
-  background: rgb(222, 222, 222); /* Button background */
-  border-radius: 5px; /* Rounded corners */
+  padding: 6px 10px; /* Adjust padding for smaller button size */
+  border-radius: 6px; /* Rounded corners */
   border: 1px solid #d2d2d2; /* Subtle border */
-  font-size: 14px; /* Reduce font size slightly */
+  font-size: 14.5px; /* Reduce font size slightly */
   font-weight: bold; /* Keep text bold */
-  color: #636161; /* Default text color */
   text-decoration: none; /* Remove underline */
   gap: 6px; /* Space between icon and text */
   transition: background-color 0.3s ease, color 0.3s ease; /* Smooth hover effect */
@@ -228,7 +227,7 @@ ul.downloads {
 
 /* Style the icon inside the button */
 .downloads a i {
-  font-size: 16px; /* Adjust icon size */
+  font-size: 20px; /* Adjust icon size */
   color: inherit; /* Match text color */
 }
 
