--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,9 @@
           </li>
         </ul>
 
-        <p class="made-by">View <a href="{{ site.github.repository_url }}">this code</a></p>
+        <!-- <p class="made-by">View <a href="{{ site.github.repository_url }}">this code</a></p> -->
+        <p class="made-by"> Meet my <a href="https://kdpham-1002.github.io/my-portfolio/">creative side</a>!</p>
+
 
       </header>
       <section>
