--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,7 +2,8 @@
 @import "rouge-github";
 
 body {
-  background-color: #121212;
+  // background-color: #121212;
+  background-color: rgb(27, 27, 30);
   color: #f0f0f0ee;
   font: 15px/1.65 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   // padding: 25px;
