--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,10 +57,8 @@
             </a>
           </li>
         </ul>
-
-        <!-- <p class="made-by">View <a href="{{ site.github.repository_url }}">this code</a></p> -->
-        <p class="made-by"> Another <a href="https://kdpham-1002.github.io/my-portfolio/">me</a>!</p>
-
+        <p class="made-by">View <a href="{{ site.github.repository_url }}">this code</a></p>
+        <!-- <p class="made-by"> Another <a href="https://kdpham-1002.github.io/my-portfolio/">me</a>!</p> -->
 
       </header>
       <section>
