--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -128,16 +128,20 @@ dt {
 }
 
 blockquote {
-  border-left:1px solid #e5e5e5;
-  margin:0;
-  padding:0 0 0 20px;
-  font-style:italic;
+  border-left:1px solid #dddd;
+  margin: 5px;
+  padding:0 0 0 15px;
+  // font-style:italic;
+  // background-color: rgb(65,65,65);
+  // border-radius: 5px; /* Optional: rounded corners */
 }
 
 code, pre {
   font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
   color:white;
-  ;
+  background-color: rgb(65,65,65);
+  border-radius: 5px;
+  padding:2px 4px;
 }
 
 pre {
@@ -167,7 +171,7 @@ hr {
   background:#dddd;
   border:0;
   height:1px;
-  margin: 20px 0px 20px;
+  margin: 25px 0px;
 }
 
 /* Style the "Made by" text */
