Refine line-height property for headings in jekyll-theme-minimal.scss

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -56,7 +56,7 @@ p, ul, ol, table, pre, dl {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0; /* Remove default margins */
-  line-height: 1.2; /* Adjust internal spacing */
+  line-height: 1.2;
 }
 
 h1 {
