Update "made-by" link in default.html and refine mindpalace URL in my-experiences.md

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
             </a>
           </li>
         </ul>
-        <p class="made-by"> Another <a href="https://kdpham-1002.github.io/my-portfolio/">me</a>!</p>
+        <p class="made-by"> Another <a href="https://kdpham-1002.github.io/mindpalace/about/">me</a>!</p>
         <!-- <p class="made-by">View <a href="{{ site.github.repository_url }}">this code</a></p> -->
 
       </header>
