Update code and markdown formatting for improved clarity and consistency in styles and experiences sections

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -164,7 +164,7 @@ blockquote {
 
 code, pre {
   font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
-  color: #d5d5d5;
+  color: #dddddd;
   background-color: rgb(65,65,65);
   border-radius: 5px;
   padding:2px 4px;
