Update text color for headings and strong elements to enhance readability

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -80,13 +80,13 @@ h2 {
 }
 
 h3 {
-  color: #f0f0f0;
+  color: #f0f0f0ee;
   margin: 0 0 15px;
   font-size: 25px;
 }
 
 h4 {
-  color: #f0f0f0;
+  color: #f0f0f0ee;
   margin: 0 0 15px;
   font-size: 16.5px;
   line-height: 1.5;
@@ -94,7 +94,7 @@ h4 {
 }
 
 h5 {
-  color: #f0f0f0;
+  color: #f0f0f0ee;
   margin: 0 0 15px;
   font-size: 15.5px;
   line-height: 1.5;
@@ -102,13 +102,13 @@ h5 {
 }
 
 h6 {
-  color: #f0f0f0;
+  color: #f0f0f0ee;
   margin: 0 0 20px;
   font-size: 20px;
 }
 
 strong {
-  color: #f0f0f0;
+  color: #f0f0f0ee;
   font-weight: 900;
 }
 
@@ -140,7 +140,7 @@ table {
 
 th, td {
   font-weight: normal;
-  color: #f0f0f0;
+  color: #f0f0f0ee;
   text-align: center;
   padding: 10px 0px;
   border: none;
@@ -148,7 +148,7 @@ th, td {
 }
 
 dt {
-  color: #f0f0f0;
+  color: #f0f0f0ee;
   font-weight: 700;
 }
 
@@ -208,7 +208,7 @@ hr {
 }
 
 // footer {
-//   color: #f0f0f0;
+//   color: #f0f0f0ee;
 //   text-align: center;
 //   font-size: 13px;
 //   width: auto; /*270px*/
