Update emoji in footer and experiences sections for enhanced engagement

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
             </a>
           </li>
         </ul>
-        <p class="made-by"> Another <a href="https://khoapham1002.github.io/mindpalace/">me</a>! 🙋‍♂️</p>
+        <p class="made-by"> Another <a href="https://khoapham1002.github.io/mindpalace/">me</a>! 👀</p>
         <!-- <p class="made-by">View <a href="{{ site.github.repository_url }}">this code</a></p> -->
 
       </header>
